tests/macros/plugin/extension.stderr
error: option `extension` does not exist for kind `plugin`
 --> $DIR/extension.rs:2:44
  |
2 |     let q = requestty::questions![Plugin { extension: todo!() }];
  |                                            ^^^^^^^^^
