tests/macros/plugin/extension.rs
fn main() {
    let q = requestty::questions![Plugin { extension: todo!() }];
}
